emmploy mapstruct for mapper